Update for Stargaze

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-REST_API_ENDPOINT=https://lcd-juno.itastakers.com/
-RPC_ENDPOINT=https://rpc-juno.itastakers.com/
+REST_API_ENDPOINT=https://rest.stargaze.publicawesome.dev/
+RPC_ENDPOINT=https://rpc.stargaze.publicawesome.dev/
 VESTING_ACCOUNTS=<comma-sepparate-list-of-vesting-account-addresses>
