npm audit, wrap updateData in try / catch

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+INTERVAL=7200000
 REST_API_ENDPOINT=https://rest.stargaze.publicawesome.dev/
 RPC_ENDPOINT=https://rpc.stargaze.publicawesome.dev/
 VESTING_ACCOUNTS=<comma-sepparate-list-of-vesting-account-addresses>
