--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@cosmjs/stargate": "^0.26.5",
     "@cosmjs/tendermint-rpc": "^0.26.5",
     "axios": "^0.22.0",
+    "cors": "^2.8.5",
     "cosmjs-types": "^0.2.0",
     "dotenv": "^10.0.0",
     "express": "^4.17.1"
